--- a/survey.css
+++ b/survey.css
@@ -12,6 +12,7 @@
   --focus-outline-offset: 2px;
   --spacing-xs: 0.5rem;
   --spacing-sm: 1rem;
+  --radius-sm: 2px;
 
 }
 
@@ -54,7 +55,7 @@ body {
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    color: transparent; /* 放在最后，仅在支持 clip 的浏览器生效 */
+    
 
     /* 动画背景移动 */
     animation: gradientShift 6s ease infinite;
@@ -303,12 +304,6 @@ body {
     color: #aaa;
 }
 
-/* 确保 p 标签不影响居中 */
-.footer-content p {
-    display: inline-block;
-    width: 100%;
-}
-
 
 .footer-content a {
     color: #007bff;
@@ -402,10 +397,4 @@ summary:focus-visible {
         display: none; /* 隐藏汉堡菜单 */
     }
 
-}
-
-@media (min-width: 1024px) {
-    .hamburger {
-        display: none;
-    }
 }
