--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
   --focus-outline-offset: 2px;
   --spacing-xs: 0.5rem;
   --spacing-sm: 1rem;
+  --radius-sm: 2px;
 
 }
 
@@ -398,13 +399,6 @@ summary:hover {
   text-align: center;       
   color: #aaa;
 }
-
-/* Ensure that the p tag does not affect centering */
-.footer-content p {
-  display: inline-block;
-  width: 100%;
-}
-
 
 
 .footer-content a {
