--- a/ev-brands.css
+++ b/ev-brands.css
@@ -30,14 +30,12 @@ body {
 .header {
     display: flex;
     flex-direction: column;
-    min-height: 66px;   /*90*/
-    padding: 0 0.8rem;  /*1rem*/
+    min-height: 66px;  
+    padding: 0 0.8rem;
     margin: 0 auto;
     background-color: white;
     width: 100%;
     max-width: 1200px;
-
-    /* 吸顶核心 */
     position: sticky;
     top: 0;
     z-index: 1000;
